# gamehub-backend

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: games.py  reviews.py  router.py
backend/app/core/: config.py  database.py
backend/app/schemas/: game.py  review.py
